--- a/Reservia.css
+++ b/Reservia.css
@@ -7,9 +7,9 @@ body
 
 .corps
 { 
- font-size: 1.1em;
+ font-size: 0.9em;
  margin: auto;
- width: ;
+ width: 1200px;
 }
 
 /*header*/
@@ -26,17 +26,19 @@ nav ul
     display: flex;
 }
 nav li
-{
-    margin-right: 35px;
+{   
+    margin-right: 50px;
 }
 nav a
-{  
+{   
+
+    font-size: 0.9em;
     color:  #0065FC ;
-    text-decoration: none;
+    text-decoration: none;   
 }
 .activites
 {
-color: rgb(46, 44, 44);
+color: black;
 }
 .sabscribe
 {
@@ -65,14 +67,16 @@ h1, h2
      background-color: #F2F2F2;
      margin-right: 0px;
 }
-.link-input
-{   font-weight: bold;
+.recherche input
+{   font-family: 'Raleway', sans-serif;
+    font-size: 1em;
+    font-weight: bold;
     border: solid 1px #F2F2F2;
     border-radius: 0px;
     padding: 12px;
     color: black; 
 }
-button
+.formulaire button
 {   font-weight: bold;
     color: white;
     border: 1px solid #0065FC; 
@@ -83,21 +87,21 @@ button
 .filtres
 {
     display: flex;
-    justify-content: flex-start;
+    justify-content: start;
     margin-top: 20px;
+    
     
      
 }
 header h2
 {
     margin-top:10px;
+    margin-right: 30px;
 }
 .formulaire-filtre
 {
    display: flex;
-   justify-content: flex-start;
-
-    
+   justify-content: flex-start;   
 }
 
 .formulaire-filtre i
@@ -106,54 +110,44 @@ header h2
     color:  #0065FC;
     border: solid 1px  #DEEBFF;
     border-radius: 20px;
-    padding: 10px;
-    background-color: #DEEBFF;
-    position: relative;
-    left: 40px;
+    padding: 10px 10px 10px 10px;
+    background-color: #DEEBFF;   
 }
-.formulaire-fami i
-{
-    font-size: 15px;
-    color:  #0065FC;
-    border: solid 1px  #DEEBFF;
-    border-radius: 20px;
-    padding:10px 12px 10px 12px;
-    background-color: #DEEBFF; 
-    position: relative;
-    left: 40px;
-}
-.link-filtre
-{
+
+.link-filtre 
+{  
+    font-family: 'Raleway', sans-serif;
+    display: flex;
+    margin-right: 20px;
     font-weight: bold;
-    border: 2px solid #F2F2F2;
-    border-radius: 20px;
-    padding: 10px 10px 10px 40px;
-    width: 80px;  
+    font-size: 1em;
+    background-color: white;
+    border: 2px solid #F2F2F2  ;
+    border-radius: 20px; 
+    padding: 0px;    
 }
-.link-family
-{   font-weight: bold;
-    border: 2px solid #F2F2F2;
-    border-radius: 20px;
-    padding: 10px 15px 10px 40px;
-    width: 50px; 
-    
-}
-.link-animal
+.link-filtre span
 {
-    font-weight: bold;
-    border: 2px solid #F2F2F2;
-    border-radius: 20px;
-    padding: 10px 10px 10px 40px;
-    width: 120px; 
+    padding: 10px 15px 10px 10px;
 }
+
 .info i
-{   
+{  
+     display: inline-block;
+     vertical-align: bottom;
+     margin-right: 5px;
+     margin-bottom: 12px;
     color: #0065FC;
-    font-size: 12px;
-    margin-right: 10px;
-    border: 1px #dad9d9 solid; 
+    font-size: 10px;
+    border: 2px #F2F2F2 solid; 
     border-radius: 20px;
-    padding: 3px 7px 5px 7px;  
+    padding: 5px 8px 5px 8px;  
+}
+.info p
+{
+    display: inline-block;
+    vertical-align: bottom;
+    margin-top: 30px;
 }
 
 /*main*/
