--- a/Reservia.css
+++ b/Reservia.css
@@ -4,22 +4,15 @@ body
     font-family: 'Raleway', sans-serif;
     font-size: 1em;
     border-right: 1px solid rgb(187, 184, 184);
-      margin: 0 5%;     
+    margin: 2% 5%;     
 }
-img
-{
- max-width: 100%;
-}
-*
-{
- box-sizing: border-box;
-}
+
 /*header*/
 nav
 {
   display: flex;
   justify-content: space-between;
-  margin-top: 2%;
+  
 }
 nav ul
 { 
@@ -55,7 +48,7 @@ nav li
 }
 .link-recherche p
 {
- margin-top: -10px;
+   margin-top: -10px;
 }
 h1, h2
 {   
@@ -67,6 +60,7 @@ h1, h2
 {
     color: black;
     font-size: 1.2em;
+    font-family: 'raleway' sans-serif;
 }
 .formulaire
 {
@@ -85,8 +79,9 @@ h1, h2
 }
 .recherche input
 {   
+    font-family: 'raleway', sans-serif;
     font-size: 1.1em;
-    font-weight: bold;
+    font-weight:bold;
     border: solid 1px #F2F2F2;
     border-radius: 0px;
     padding: 10px 0px 10px 15px;
@@ -162,10 +157,10 @@ h1, h2
 
 .info i
 {  
-     display: inline-block;
-     vertical-align: bottom;
-     margin-right: 5px;
-     margin-bottom: 12px;
+    display: inline-block;
+    vertical-align: bottom;
+    margin-right: 5px;
+    margin-bottom: 12px;
     color: #0065FC;
     font-size: 10px;
     border: 2px #F2F2F2 solid; 
@@ -184,7 +179,9 @@ h1, h2
 {
     display: flex;
     justify-content: space-between;
-    flex-direction: row;  
+    flex-direction: row;
+    margin-right: 3%;
+    margin-top: 30px;  
 }
 strong
 {
@@ -198,13 +195,18 @@ strong
     background-color:  #F2F2F2;
     /*padding: 20px 10px 40px 40px; */
 }
+#hebergements-a-marseille
+{
+    padding: 20px 0px 5px 35px;
+}
+
 .hebergements-marseille-cartes
 {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: auto;
-    grid-gap: 20px;
-    width: 90%;
+    grid-gap: 30px;
+    width: 92%;
     margin: 0 auto;
 }
 .afficher
@@ -212,29 +214,30 @@ strong
     font-weight: bold;
     border: none;
     font-size: 1.2em;
-    margin-top: 10px;
+    margin: 40px 0px 40px 35px;
+   
 }
 .hebergements-marseille-item
-{   
-
+{ 
     text-decoration: none;
     border: solid 1px #F2F2F2;
     border-radius: 20px;
     padding: 3px;
-    margin-bottom: 30px;
     background-color: white;
     color: black;
     box-shadow: 0px 0px 10px #a1a1a1;
+
 }
 .hebergements-marseille-item img
 {
     object-fit: cover;
-    height:  169px;
+    height: 120px; 
     border: 1px #F2F2F2 solid;
     border-radius: 15px 15px 0px 0px;
+    min-width: 99%;
 }
 .hebergements-marseille-contenu
-{
+{ 
     padding:0px 10px 0px 10px;
 }
 .hebergements-marseille-contenu h3
@@ -265,177 +268,244 @@ strong
 }
 .populaires
 { 
- flex-basis: 30%;
+ flex-basis: 32%;
  border: solid 1px  #F2F2F2;
  border-radius: 20px;
  background-color:  #F2F2F2;
  /*padding: 10px 10px 0px 30px;*/
 }
+.populaires h2
+{
+    padding: 20px 0px 5px 30px;
+}
 .populaires-cartes
 {
-    width: 90%;
+    width: 85%;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto;
-    grid-gap: 20px;
-    margin: 0 auto;
+    grid-gap: 30px;
+    margin: auto;
 }
 .link-populaires
 {
     display: flex;
     justify-content: space-between;
-    padding: 10px 10px 10px 10px;
+  
 }
 .link-populaires i
 {
   font-size: 25px;
-  margin-top: 20px;
+  margin-top: 40px;
   margin-right: 30px;
 }
 .populaires-item
 {
     display: flex;
-    justify-content: start;
+    justify-content: space-between;
     border: 1px solid  #F2F2F2;
     border-radius: 20px;
     box-shadow: 0px 0px 10px #a1a1a1;
-    padding: 5px;
+    padding: 3px;
     background-color: white;
     text-decoration: none;
     color: black;
-   margin-bottom: 30px;
-   margin-right: 30px;
+   
+  
 }
 .populaires-item img
 {
+ object-fit: cover;
+ min-width: 38%;
  border: 1px solid  #F2F2F2;
  border-radius:  15px 0px 0px 15px;
- width: 140px;
- height: 140px;
+ height: 145px;
+ 
 }
 #link-img
 {
-    width: 155px;
+    max-width: 38%;
 }
 .populaires-contenu
 {
-    margin: -10px 20px -5px 15px;
+    padding: 0px 0px 0px 20px;
+    margin-top: -5px;
 }
 .populaires-contenu p
 {
-    margin-top: -15px;
+   margin-top: -10px; 
 }
 .populaires-contenu i
-{   font-size: 13px;
-    margin-top: 30px;
+{  
+     font-size: 13px;
+     margin-top: 20px;   
 }
+
 .activites-marseille
 {
     margin-top: 50px;
+    margin-right: 3%;
 }
 .activites-marseille-cartes
 {  
-    margin-top: 20px;
-    margin-right: 50px;
-    display: flex;
-   justify-content: space-between;   
+    display: grid;
+    grid-template-columns: repeat(4, 23%);
+    grid-template-rows:auto;
+    grid-gap: 40px;  
+    width:99%;     
 }
-.activites-marseille-item
-{ 
+.activites-marseille-port
+{  
+   grid-column: 1 / span 1;
+   grid-row: 1 / span 2;
    border: 1px solid #F2F2F2;
    border-radius: 20px;
    text-decoration: none;
-   margin-right: 40px;
    box-shadow: 0px 0px 10px #e0dfdf; 
-   margin-bottom: 40px;    
+     
 }
-.activites-marseille-item h3
-{
-    margin: 15px 0px 0px 20px;
-}
-.activites-marseille-item img
-{
-   height: 380px; 
-  width: 310px;
+.activites-marseille-port img
+{  
+  object-fit: cover;
+  height: 390px;
+  max-width: 100%;
   border: #F2F2F2 solid 1px;
   border-radius: 20px 20px 0px 0px;
 }
- .pomegues-frioul
- {
-     display: flex;
-     flex-direction: column;
-     justify-content: space-between;
-     margin-right: 40px;
-     margin-bottom: 40px;    
- }
- .pomegues-frioul h3
- {
-   margin: 15px 0px 20px 20px;
- }
-.activites-marseille-pomegues
+.activites-marseille-port h3
 {
+    margin: 15px 0px 0px 20px; 
+}
+ .activites-marseille-pomegues
+ {  
+    grid-column: 2 / span 1;
+    grid-row: 1 / span 1;
     border: 1px solid #F2F2F2;
     border-radius: 20px;
     text-decoration: none;
     box-shadow: 0px 0px 10px #e0dfdf;  
-}
+ }
+ 
+ .activites-marseille-pomegues img
+ {
+     object-fit: cover;
+     height: 160px;
+     border: #F2F2F2 solid 1px;
+     border-radius: 20px 20px 0px 0px;
+     min-width: 100%;
+     
+ }
+ .activites-marseille-pomegues h3
+ {
+     margin:  15px 0px 20px 20px;
+ }
+
 .activites-marseille-frioul
-{
+{   
+    grid-column: 2 / 2;
+    grid-row: 2 / span 2;
     border: 1px solid #F2F2F2;
     border-radius: 20px;
     text-decoration: none;
     box-shadow: 0px 0px 10px #e0dfdf; 
-    margin-top: 40px; 
-}
-.activites-marseille-pomegues img
-{   width: 310px;
-    height: 170px;
-    border: #F2F2F2 solid 1px;
-    border-radius: 20px 20px 0px 0px;
+    margin-bottom: 40px; 
+    
 }
 .activites-marseille-frioul img
-{
-    width: 310px;
-    height: 110px;
-    border: #F2F2F2 solid 1px;
-    border-radius: 20px 20px 0px 0px;
+{   
+    object-fit: cover;
+     height: 125px;
+     border: #F2F2F2 solid 1px;
+     border-radius: 20px 20px 0px 0px;
+     min-width: 100%; 
 }
-.activites-marseille-link
+.activites-marseille-frioul h3
 {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin-right: 50px;
-    margin-bottom: 40px;
+    margin:  15px 0px 0px 20px;
 }
-.activites-marseille-link h3
+
+.activites-marseille-calanques
 {
-    margin: 15px 0px 20px 20px; 
-}
-.activites-marseille-style
-{
+    grid-column: 3 / 3;
+    grid-row: 1 / span 2;
     border: 1px solid #F2F2F2;
    border-radius: 20px;
    box-shadow: 0px 0px 10px #e0dfdf; 
    text-decoration: none;
+    
 }
-.activites-marseille-style img
+.activites-marseille-calanques img
+{   
+     object-fit: cover;
+     height: 390px;
+     border: #F2F2F2 solid 1px;
+     border-radius: 20px 20px 0px 0px; 
+     max-width: 100%;
+
+}
+.activites-marseille-calanques h3
 {
-    height: 140px;
-    width: 310px;
+    margin:  15px 0px 20px 20px;
+}
+.activites-marseille-dame-garde
+{
+    grid-column: 4 / 4;
+    grid-row: 1 / span 1;
+    border: 1px solid #F2F2F2;
+   border-radius: 20px;
+   box-shadow: 0px 0px 10px #e0dfdf; 
+   text-decoration: none;
+   margin-bottom: 20px;
+}
+.activites-marseille-dame-garde img
+{   
+    object-fit: cover;
+    height: 145px;
     border: #F2F2F2 solid 1px;
     border-radius: 20px 20px 0px 0px; 
+    min-width: 100%;
+
 }
+.activites-marseille-dame-garde h3
+{
+    margin: 15px 0px 0px 20px;
+}
+.activites-marseille-longchamp
+{
+    grid-column: 4 / 4;
+    grid-row: 2 / span 1;
+    border: 1px solid #F2F2F2;
+   border-radius: 20px;
+   box-shadow: 0px 0px 10px #e0dfdf; 
+   text-decoration: none;
+   margin-top: -20px;
+}
+.activites-marseille-longchamp img
+{   
+    object-fit: cover;
+    height: 145px;
+    border: #F2F2F2 solid 1px;
+     border-radius: 20px 20px 0px 0px; 
+    min-width: 100%;
+
+}
+.activites-marseille-longchamp h3
+{
+  margin: 15px 0px 20px 20px;
+}
+
+
+
+
 
 /*footer*/
 footer
 {   
-    margin-top: 20px;
+    margin-top: 30px;
     background-color: #F2F2F2;
     display: flex;
     justify-content: space-between;
     padding: 20px 380px 20px 40px;
-    margin-bottom: 2%;
     margin-left: -40px;
 }
 footer ul
@@ -451,7 +521,7 @@ footer a
 }
 footer li
 {
-margin-top: 10PX;
+margin-top: 10px;
 }
 
 @media screen and (max-width:1280px)
