--- a/Reservia.css
+++ b/Reservia.css
@@ -3,7 +3,7 @@ body
 {
     font-family: 'Raleway', sans-serif;
     font-size: 1em;
-    border-right: 1px solid rgb(187, 184, 184);
+    border-right: 1px solid rgb(214, 211, 211);
     margin: 2% 5%;     
 }
 
@@ -133,8 +133,8 @@ h1, h2
     color:  #0065FC;
     border: solid 1px  #DEEBFF;
     border-radius: 50%;
-    width: 45px;
-    height: 45px;
+    width: 50px;
+    height: 50px;
     background-color: #DEEBFF;   
 }
 
@@ -144,7 +144,7 @@ h1, h2
     margin-right: 20px;
     font-weight: bold;
     background-color: white;
-    border: 2px solid #F2F2F2  ;
+    border: 2px solid  #F2F2F2;
     border-radius: 30px; 
     padding: 0px;    
 }
@@ -309,9 +309,7 @@ strong
     padding: 3px;
     background-color: white;
     text-decoration: none;
-    color: black;
-   
-  
+    color: black; 
 }
 .populaires-item img
 {
@@ -320,7 +318,6 @@ strong
  border: 1px solid  #F2F2F2;
  border-radius:  15px 0px 0px 15px;
  height: 145px;
- 
 }
 #link-img
 {
@@ -361,7 +358,7 @@ strong
    border: 1px solid #F2F2F2;
    border-radius: 20px;
    text-decoration: none;
-   box-shadow: 0px 0px 10px #e0dfdf; 
+   box-shadow: 0px 0px 10px #c0bfbf; 
      
 }
 .activites-marseille-port img
@@ -383,7 +380,7 @@ strong
     border: 1px solid #F2F2F2;
     border-radius: 20px;
     text-decoration: none;
-    box-shadow: 0px 0px 10px #e0dfdf;  
+    box-shadow: 0px 0px 10px #c0bfbf;  
  }
  
  .activites-marseille-pomegues img
@@ -407,7 +404,7 @@ strong
     border: 1px solid #F2F2F2;
     border-radius: 20px;
     text-decoration: none;
-    box-shadow: 0px 0px 10px #e0dfdf; 
+    box-shadow: 0px 0px 10px #c0bfbf; 
     margin-bottom: 40px; 
     
 }
@@ -430,7 +427,7 @@ strong
     grid-row: 1 / span 2;
     border: 1px solid #F2F2F2;
    border-radius: 20px;
-   box-shadow: 0px 0px 10px #e0dfdf; 
+   box-shadow: 0px 0px 10px #c0bfbf; 
    text-decoration: none;
     
 }
@@ -453,7 +450,7 @@ strong
     grid-row: 1 / span 1;
     border: 1px solid #F2F2F2;
    border-radius: 20px;
-   box-shadow: 0px 0px 10px #e0dfdf; 
+   box-shadow: 0px 0px 10px #c0bfbf; ; 
    text-decoration: none;
    margin-bottom: 20px;
 }
@@ -476,7 +473,7 @@ strong
     grid-row: 2 / span 1;
     border: 1px solid #F2F2F2;
    border-radius: 20px;
-   box-shadow: 0px 0px 10px #e0dfdf; 
+   box-shadow: 0px 0px 10px #c0bfbf; 
    text-decoration: none;
    margin-top: -20px;
 }
@@ -524,12 +521,15 @@ footer li
 margin-top: 10px;
 }
 
-@media screen and (max-width:1280px)
+
+
+
+@media screen and (max-width:1024px)
 {
     body
     {
-       margin: 5% 15%;
-       font-size: 1.1em;
+       margin: 5% 5%;
+       font-size: 1.2em;
     }
     nav 
     {
@@ -539,7 +539,7 @@ margin-top: 10px;
     nav ul 
     {
         justify-content: start;
-        margin-left: -60px;
+        align-items: flex-start;
 
     }
       .subscribe, nav a
@@ -553,13 +553,14 @@ margin-top: 10px;
     .subscribe
     {
         margin-top: -40px;
-        margin-left: -90px;
+        margin-left: -240px;
 
     } 
     .link-nav
     { display: flex;
-     justify-content: space-between; 
-     margin-right: -40px;
+     justify-content: start; 
+     margin-left: -60px;
+     margin-right: 100px;
      padding: 10px 40px 20px 40px;
      margin-bottom: -20px;
     }
@@ -569,12 +570,13 @@ margin-top: 10px;
         border-bottom: solid #0065FC 2px;
     }
     nav
-    {   
+    {    
         border-bottom: solid 2px #F2F2F2;
+    
     }
     h1 
     {
-        margin-right: 50px;
+        margin-right: 150px;
     }
     .formulaire
     {
@@ -606,26 +608,230 @@ margin-top: 10px;
     }
     .formulaire-filtre
    {
-     flex-wrap: wrap;
+     flex-wrap:wrap;
    } 
     .link-filtre 
    {  
     margin-bottom: 10px;
-    margin-right: 10px;  
+    margin-right: 50px;  
    } 
    .info i
    {  font-size: 12px;
-        vertical-align: top;
+        
         margin-top: 25px;
         padding: 5px 9px 7px 9px;
    }
     .info p
    {
-       vertical-align:top;
        margin-top: -35px;
        margin-left: 40px;
+       margin-right: 100px;
    }
+    
+   .les-hotels
+   {
+       display: flex;
+       justify-content: space-between;
+       flex-direction: column;
+       margin-top: 30px;  
+   }
+   .populaires
+   {  
+       border-radius: 0px;
+       margin-left: -4%;
+       margin-right: -3%;
+   }
+   .populaires-cartes
+    {
+        width: 90%;
+        grid-gap: 15px;
+        margin-bottom: 40px;
+           
+    }
+    .populaires-item
+    {
+        padding: 5px;
+    }
+   .populaires-item img
+   {
+   
+     min-width: 40%;
+     height: 160px;
+   }
+   #link-img
+   {
+    max-width: 40%;
+   }
+  .populaires-contenu
+   {
+     padding: 0px 0px 0px 20px;
+     margin-top: -12px;
+   }
+  .populaires-contenu p
+   {
+     margin-top: -10px; 
+   }
+  .populaires-contenu i
+   {  
+     font-size: 15px;   
+   }
+
+   .hebergements-marseille
+   {  
+       border: 0px;
+       background: none;
+       order: 2;
+   }
+   #hebergements-a-marseille
+   {
+       padding: 20px 0px 0px 15px;
+   }
+   .hebergements-marseille-cartes
+   {
+       display: grid;
+       grid-template-columns: 1fr;
+       grid-template-rows: auto;
+       grid-gap: 20px;
+       width: 95%;
+   } 
+   .hebergements-marseille-item img
+   {
+       object-fit: cover;
+       height: 150px; 
+       border: 1px #F2F2F2 solid;
+       border-radius: 15px 15px 0px 0px;
+       min-width: 99%;
+   }
+   .hebergements-marseille-contenu
+   { 
+       padding:0px 10px 0px 15px;
+   }
+   .hebergements-marseille-contenu h3
+   {  
+       margin-top: 10px;
+   }
+   .hebergements-marseille-contenu p
+   {   
+       margin-top: 10px;
+       margin-bottom: 10px;
+   }
+   .hebergements-marseille-contenu i
+   {
+       font-size: 15px;
+   }
+   .afficher
+   {   
+       background: none;
+       border: none;
+       margin: 40px 0px 0px 15px; 
+   }
+   .activites-marseille
+    {
+       margin-top: 50px;
+       margin-right: 5%;
+       margin-left: 3%;
+    }
+   .activites-marseille-cartes
+   {  
+       display: flex;
+       flex-direction: column; 
+   } 
+   .activites-marseille-port img
+   {  
+     object-fit: cover;
+     height: 170px;
+     min-width: 100%;
+   }
+   .activites-marseille-port h3
+   {
+       margin: 15px 0px 20px 20px; 
+   }
+    .activites-marseille-pomegues img
+    {
+        object-fit: cover;
+        height: 170px;
+        min-width: 100%;   
+    }
+    .activites-marseille-pomegues h3
+    {
+        margin:  15px 0px 20px 20px;
+    }
+   .activites-marseille-frioul
+   {   
+       margin-bottom: 0px;   
+   }
+   .activites-marseille-frioul img
+   {   
+       object-fit: cover;
+        height: 170px;
+        min-width: 100%; 
+   }
+   .activites-marseille-frioul h3
+   {
+       margin:  15px 0px 20px 20px;
+   }
+   .activites-marseille-calanques
+   {
+       margin-bottom: 0px;
+   }
+   .activites-marseille-calanques img
+   {   
+        object-fit: cover;
+        height: 170px;
+        min-width: 100%;
+   }
+   .activites-marseille-calanques h3
+   {
+       margin:  15px 0px 20px 20px;
+   }
+   .activites-marseille-dame-garde
+   {
+      margin-bottom: 0px;
+   }
+   .activites-marseille-dame-garde img
+   {   
+       object-fit: cover;
+       height: 170px; 
+       min-width: 100%;
+   
+   }
+   .activites-marseille-dame-garde h3
+   {
+       margin: 15px 0px 20px 20px;
+   }
+   .activites-marseille-longchamp
+   {
+      margin-top: 0px;
+   }
+   .activites-marseille-longchamp img
+   {   
+       object-fit: cover;
+       height: 170px;
+       min-width: 100%;
+   
+   }
+   .activites-marseille-longchamp h3
+   {
+     margin: 15px 0px 20px 20px;
+   }
+   
+   footer
+   {   
+       margin-top: 50px;
+       background-color: #F2F2F2;
+       display: flex;
+       flex-direction: column;
+       justify-content: space-between;
+       padding: 20px 0px 20px 50px;
+       margin-left: -4%;
+   }
+ 
   
+
+
+
+    
+
 
    
     
